--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -9,7 +9,8 @@ page-home {
         position:absolute; /*it can be fixed too*/
         left:0; right:0;
         top:0; bottom:0;
-        max-width: 150px;
+        padding: 5px;
+
     }
     #cards {
         max-width: 600px;
@@ -18,23 +19,21 @@ page-home {
     }
 
     ion-card .cardTitle {
-        text-align: left; 
-        line-height: 12px;
+        text-align: left;
     }
 
     ion-card .cardCategory {
-        text-align: right; 
-        line-height: 12px;
+        text-align: right;
     }
 
     ion-card .cardAuthor {
-        width: 100%; 
-        float: left; 
+        width: 100%;
+        float: left;
         text-align: left;
     }
 
     ion-card .cardDescription {
-        
+
     }
 
     ion-card ion-row ion-item h1{
